<resources>
    <string name="app_name">Artek</string>
    <string name="title_activity_login">Sign in</string>


    <string name="title_activity_main">Artek</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_camp">Select camp</string>
    <string name="logo_pic" translatable="false">logo</string>
    <string name="login_vk">Sign in with vk</string>
    <string name="start_game">Start game</string>
    <string name="end_game">End game</string>
    <string name="title_activity_game">Game</string>
    <string name="radio">Radio</string>
    <string name="artekdeti">Artek Deti</string>
    <string name="dictionary">Dictionary</string>
    <string name="tips">Tips</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="list_points">All places</string>
    <string name="scanned_points">Visited places</string>
    <string name="statistics">Statistics</string>


    <string name="action_settings">Settings</string>
    <string name="cong">Congratulations!</string>


    <string name="access_file_denied">Permission denied to read your External storage</string>
    <string name="error_gcm">GCM registration error!</string>
    <string name="error">Error occurred!</string>
    <string name="gps_not_installed">Google Play Service is not install/enabled in this device!</string>
    <string name="gps_not_support">This device does not support for Google Play Service!</string>
    <string name="not_connected">Check your internet connection</string>
    <string name="account_data_not_valid">Check your account data</string>
    <string name="success_sign_in">You are successfully sign in</string>
    <string name="success">Success!</string>
    <string name="failed">Failed</string>

    <string name="subscribe_us">Subscribe us at VK</string>
    <string name="subscribe_long">In our group you will first, who now about new updates \n
        and we will thank about your support
    </string>
    <string name="subscribe">Subscribe</string>
    <string name="later">Later</string>
    <string name="subscribe_thank">Thank you!</string>

    <string name="must_sign_in_for_game">You have to sing in to play</string>
    <string name="must_select_camp_to_play">You have to select camp to play</string>

    <string name="visited_points">Visited points: </string>
    <string name="left_points">Left points: </string>
    <string name="score">Your score: </string>
    <string name="let_visit">Let\'s visit  </string>
    <string name="no_points">You visited no points!</string>
    <string name="all_points">You visited all points!</string>
    <string name="click_to_send">Click to send code on server</string>

    <string name="update_available">Update available!</string>
    <string name="current_version">Current version is 0.5-rc</string>
    <string name="last_version">, Last version</string>
    <string name="update">Update</string>
    <string name="update_later">Update later</string>
    <string name="no_update">No updates available</string>
    <string name="download">Downloading…</string>

    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="no_camera">Your device hasn\'t camera</string>
    <string name="exit_press_again">Press again to exit</string>

    <string name="navdrawer_general_section">General</string>
    <string name="navdrawer_game_section">Game</string>
    <string name="navdrawer_services_section">Services</string>
    <string name="navdrawer_settings_section">Settings</string>
    <string name="feedback">Leave feedback</string>
    <string name="loading">Loading</string>

    <string name="version">App version</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="developer">Developers</string>
    <string name="developer_lol">Шведчиков Алексей</string>
    <string name="developer_lol_summary">dev@temoteam.ru</string>
    <string name="developer_lol_link">https://vk.com/alexsvdk</string>
    <string name="developer_lala">Несененко Срергей</string>
    <string name="developer_lala_summary">dev@temoteam.ru</string>
    <string name="developer_lala_link">https://vk.com/id241199506</string>
    <string name="developer_kek">Shinkarev Andrey</string>
    <string name="developer_kek_summary">dev@temoteam.ru</string>
    <string name="developer_kek_link">https://vk.com/rooh1622</string>
    <string name="temoteam">Temoteam</string>
    <string name="developer_site">Developer website</string>
    <string name="developer_site_link" translatable="false">https://temoteam.ru</string>
    <string name="developer_github_repo">GitHub repository</string>
    <string name="developer_github_repo_summary" translatable="false">temoteam/artek</string>
    <string name="developer_github_repo_link" translatable="false">https://github.com/temoteam/artek</string>
    <string name="developer_google_play">Google Play application webpage</string>
    <string name="developer_google_play_link" translatable="false">https://github.com/temoteam/artek</string>
    <string name="developer_vkontakte">VK community</string>
    <string name="developer_vkontakte_summary" translatable="false">vk.com/temoteam</string>
    <string name="developer_vkontakte_link" translatable="false">https://vk.com/temoteam</string>
    <string name="privacy_policy_link" translatable="false">https://azurecom.ru/artek/artek_privacy-policy.html</string>

    <string name="about">About</string>
    <string name="continue_btn">Continue</string>
    <string name="privacy_policy">Privacy policy</string>


    <string name="toast_view_exception">Looks like you don\'t have any browsers installed</string>


</resources>
