<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_tips"
            android:title="@string/dictionary" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_dictionary"
            android:title="@string/tips" />

    </group>
    <item android:title="">
        <menu>

            <item
                android:id="@+id/nav_radio"
                android:icon="@drawable/ic_radio"
                android:title="@string/radio"
                android:gravity="bottom"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"
                android:gravity="bottom"/>

        </menu>
    </item>


</menu>
