<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_allpoints"
            android:icon="@drawable/ic_stat"
            android:title="@string/list_points" />
        <item
            android:id="@+id/nav_visited"
            android:icon="@drawable/ic_visited"
            android:title="@string/scanned_points" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_radio"
            android:icon="@drawable/ic_radio"
            android:title="@string/radio"
            android:gravity="bottom"/>

    </group>



</menu>
